# ycapture

./: CMakeLists.txt  README.md
baseclasses/: CMakeLists.txt
testclient/: CMakeLists.txt  stdafx.cpp  stdafx.h  testclient.cpp
ycapture/: CMakeLists.txt  CaptureSource.cpp  CaptureSource.h  EventReceiver.cpp  EventReceiver.h  IReceiver.h  IYCSource.h  NullReceiver.cpp  NullReceiver.h  YCCritSection.h  YCMutex.h  dllmain.cpp  stdafx.cpp  stdafx.h  ycapture.cpp  ycapture.def  ycapture.h  yctypes.h
ycaptureclient/: CMakeLists.txt  CaptureSender.cpp  CaptureSender.h  stdafx.cpp  stdafx.h
